[gd_scene load_steps=4 format=3 uid="uid://bww58mn12tq4o"]

[ext_resource type="Script" path="res://player/player.gd" id="1_3xu54"]
[ext_resource type="Texture2D" uid="uid://cv3ytq56nkvgr" path="res://icon.svg" id="2_x6rwt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tk8to"]
radius = 64.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3xu54")
speed = 200.0
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tk8to")

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("2_x6rwt")

[node name="Target" type="Marker2D" parent="."]

[node name="Icon" type="Sprite2D" parent="Target"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_x6rwt")

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[node name="Body" type="Bone2D" parent="Skeleton2D"]
position = Vector2(0, 65)
rotation = -1.5708
rest = Transform2D(-4.37114e-08, -1, 1, -4.37114e-08, 0, 65)

[node name="RightShoulder" type="Bone2D" parent="Skeleton2D/Body"]
position = Vector2(129, 5.63877e-06)
rotation = 1.5708
rest = Transform2D(-4.37114e-08, 1, -1, -4.37114e-08, 129, 5.63877e-06)

[node name="RightArm" type="Bone2D" parent="Skeleton2D/Body/RightShoulder"]
position = Vector2(64, 0)
rest = Transform2D(1, 0, 0, 1, 64, 0)

[node name="RightForearm" type="Bone2D" parent="Skeleton2D/Body/RightShoulder/RightArm"]
position = Vector2(50, 0)
rest = Transform2D(1, 0, 0, 1, 50, 0)

[node name="RightHand" type="Bone2D" parent="Skeleton2D/Body/RightShoulder/RightArm/RightForearm"]
position = Vector2(50, 0)
rest = Transform2D(1, 0, 0, 1, 50, 0)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="Icon" type="Sprite2D" parent="Skeleton2D/Body/RightShoulder/RightArm/RightForearm/RightHand"]
self_modulate = Color(1, 0, 0, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_x6rwt")

[node name="LeftShoulder" type="Bone2D" parent="Skeleton2D/Body"]
position = Vector2(129, 5.63877e-06)
rotation = -1.5708
rest = Transform2D(-4.37114e-08, -1, 1, -4.37114e-08, 129, 5.63877e-06)

[node name="LeftArm" type="Bone2D" parent="Skeleton2D/Body/LeftShoulder"]
position = Vector2(64, 0)
rest = Transform2D(1, 0, 0, 1, 64, 0)

[node name="LeftForearm" type="Bone2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm"]
position = Vector2(50, 0)
rest = Transform2D(1, 0, 0, 1, 50, 0)

[node name="LeftHand" type="Bone2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm/LeftForearm"]
position = Vector2(50, 1.20005e-05)
rest = Transform2D(1, 0, 0, 1, 50, 1.20005e-05)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="Icon" type="Sprite2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm/LeftForearm/LeftHand"]
self_modulate = Color(1, 0, 0, 1)
rotation = -3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_x6rwt")
